# shanghai-dialect-1910

./: .gitignore  .gitmodules  README.md  SKILLS.md  analyze_displacement.py  analyze_phonetic_v2.py  analyze_pronunciation.py  analyze_pronunciation_summary.py  convert_to_jxl.py  extract_pdf.py  generate_priority_list.py  main.py  phonetic_analysis_v2.json  priority_report.json  pyproject.toml  shanghai_dialect_ipa.jsonl  xtask.py
.agent/data/: phonetic_rules.json
.agent/skills/shanghai-dialect-analyzer/: SKILL.md
digitized/: PAGE_INDEX.md  README.md
digitized/10-19_preliminary/11_cover/: page_0001.jxl
digitized/10-19_preliminary/12_title-pages/: page_0002.jxl
digitized/10-19_preliminary/13_preface/: page_0003.jxl  page_0004.jxl
digitized/10-19_preliminary/14_table-of-contents/: page_0009.jxl  page_0010.jxl  page_0011.jxl  page_0012.jxl  page_0013.jxl  page_0014.jxl  page_0015.jxl  page_0016.jxl
digitized/90-99_metadata/: process_scans.py
docs/: 1910_tts_design.md
scripts/: filter_filelist.py
src/: fixer.py  knowledge_base.py  learn_rules.py  loader.py  pott_g2p.py  rime_dict.py  romanization.py  rule_induction.py  utils.py  wugniu_to_ipa.py
src/analyzers/: displacement.py  phonetic.py  stats.py
src/model_proto/: matcha_hybrid.py
src/tasks/: annotate_ipa.py  export_ipa.py  jxl_convert.py  pdf_extract.py  prepare_magicdata.py  synthesize.py
tests/: test_shanghai_frontend.py
typst_source/: README.md  main.typ  metadata.typ  priority_report.json  pronunciation_analysis.json  template.typ
typst_source/contents/: appendices.typ  preliminary.typ
(+1022 files in other folders)
