[project]
name = "shanghai-dialect-exercises"
version = "0.1.0"
description = "Digitization and TTS tools for the 1910 book 'Shanghai Dialect Exercises in Romanized and Character'."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conformer>=0.3.2",
    "cython>=3.2.4",
    "diffusers>=0.36.0",
    "einops>=0.8.1",
    "gdown>=5.2.1",
    "gradio>=6.3.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "inflect>=7.5.0",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "phonemizer>=3.3.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "unidecode>=1.4.0",
    "wget>=3.2",
    "matcha-tts",
    "pillow-jxl-plugin>=1.3.7",
    "pymupdf>=1.26.7",
    "pillow>=12.1.0",
    "torchcodec>=0.9.1",
    "peft>=0.18.1",
]

[tool.uv.sources]
matcha-tts = { workspace = true }

[tool.uv.workspace]
members = ["external/Matcha-TTS"]

